@@ -13,6 +13,7 @@
 #include <locale>
 #include <set>
 #include <chrono>
+#include <map>
 
 #define FORMAT_TIMESPEC(tv) \
 	(tv).tv_sec << "." << std::setw(3) << std::setfill('0') \
@@ -230,4 +231,92 @@ std::vector<enumerated_switchlog> enumerate_switchlogs(const char *directory)
 			  return a.filename < b.filename;
 		  });
 	return switchlogs;
+}
+
+analyzed_switchlog switchlog_analyze(const enumerated_switchlog &log)
+{
+	analyzed_switchlog ret;
+
+	std::ifstream i{log.filename};
+
+	if (!i.is_open())
+		throw std::runtime_error{"Cannot open log file"};
+
+	std::string line;
+
+	std::unordered_map<std::string, state_timeline> containers;
+
+	while (1)
+	{
+		auto words=next_switchlog_line(i, line);
+
+		if (i.eof())
+			break;
+
+		if (words.size() < 3)
+			continue;
+
+
+		// First word: timestamp
+
+		std::istringstream i{std::string{words[0].begin(),
+				words[0].end()}};
+
+		i.imbue(std::locale{"C"});
+
+		elapsed_time timestamp;
+
+		if (!(i >> timestamp.seconds) || i.get() != '.' ||
+		    !(i >> timestamp.milliseconds) ||
+		    timestamp.milliseconds > 999)
+			continue;
+
+		// Third word: container name
+
+		std::string name{words[2].begin(), words[2].end()};
+
+		auto entry_iter=containers.try_emplace(name).first;
+
+		auto &entry=entry_iter->second;
+
+		// Second word: state
+		//
+		// Search ALL_STATE_LABELS for it, and let the label
+		// update_timeline.
+
+		[&]<typename ...T>
+			( std::tuple<T...>)
+			{
+				((words[1] == T::label.label ?
+				  (T::label.update_timeline(entry, timestamp),
+				   0):0), ...);
+			}(ALL_STATE_LABELS{});
+
+		// Is the goose now fully cooked?
+
+		if (!entry.final_label || !entry.completed)
+			continue;
+
+		// Make sense of the monotonic timestamps, by subtracting them.
+
+		analyzed_switchlog::container result{name, entry.final_label};
+
+		if (entry.scheduled)
+		{
+			result.waiting=
+				(entry.inprogress ? *entry.inprogress
+				 : *entry.completed) - *entry.scheduled;
+
+		}
+
+		if (entry.inprogress)
+		{
+			result.elapsed= *entry.completed - *entry.inprogress;
+		}
+
+		ret.log.push_back(std::move(result));
+		containers.erase(entry_iter);
+	}
+
+	return ret;
 }
