@@ -388,6 +388,20 @@
 	</cmdsynopsis>
 	<blockquote>
 	  <para>
+	    Logging
+	  </para>
+	</blockquote>
+	<cmdsynopsis>
+	  <command>vlad</command>
+	  <arg choice='plain'>logs</arg>
+	</cmdsynopsis>
+	<cmdsynopsis>
+	  <command>vlad</command>
+	  <arg choice='plain'>log</arg>
+	  <arg choice='opt'>number</arg>
+	</cmdsynopsis>
+	<blockquote>
+	  <para>
 	    Internal commands
 	  </para>
 	</blockquote>
@@ -2493,6 +2507,102 @@ version: 1
 	  by <command>vera</command> (in addition to several environment
 	  variables that are always set, see <xref linkend="envvars" />
 	  for more information).
+	</para>
+      </refsect1>
+
+      <refsect1 id="logging">
+	<title>Logging</title>
+
+	<para>
+	  <command>vera</command> logs all runlevel switches, this includes
+	  system startup and shutdown.
+	  The logs are retained for a set number of days, the oldest
+	  log files get automatically removed. The number of days of log
+	  retention is controlled by the <envar>SWITCHLOGDAYS</envar>
+	  environment variable.
+	  <quote><command>vlad setenv SWITCHLOGDAYS 5</command></quote> sets
+	  the retention period to five days. At most five days of logs are
+	  kept (dates without logs don't count toward the limit).
+	</para>
+
+	<blockquote>
+	  <informalexample>
+	    <programlisting><![CDATA[
+       2 2024-03-23 20:52:48 multi-user
+       1 2024-03-23 20:53:18 reboot]]></programlisting>
+	  </informalexample>
+	</blockquote>
+
+	<para>
+	  The <command>logs</command> commands lists all available switch
+	  logs, from the oldest to the newest. It produces the following
+	  output:
+	</para>
+	<itemizedlist>
+	  <listitem>
+	    <para>
+	      The log number. The logs are numbered from
+	      the newest to the oldest, so log #1 is almost the most recent
+	      log.
+	    </para>
+	  </listitem>
+
+	  <listitem>
+	    <para>
+	      The timestamp of each runlevel switch.
+	    </para>
+	  </listitem>
+
+	  <listitem>
+	    <para>
+	      Which runlevel was switched to.
+	    </para>
+	  </listitem>
+	</itemizedlist>
+
+	<para>
+	  The log files record low-level details and times, the
+	  <quote><command>vlag log</command></quote> reads log file #1, the
+	  most recent log file,
+	  and processes the logs into a basic list of containers and how
+	  long it took for each container to start.
+	  An optional parameter reads a different log file.
+	  <quote><command>vlag log 2</command></quote> reads log file #2.
+	</para>
+
+	<para>
+	  The <command>log</command> command produces a listing of containers
+	  that were started or stopped, one container per line.
+	  Each line contains:
+	</para>
+
+	<itemizedlist>
+	  <listitem>
+	    <para>
+	      How long the container's starting or stopping command ran
+	      to completion.
+	    </para>
+	  </listitem>
+
+	  <listitem>
+	    <para>
+	      How long the container waited for other containers to start
+	      or stop, before it could start or stop.
+	    </para>
+	  </listitem>
+
+	  <listitem>
+	    <para>
+	      The container's name.
+	    </para>
+	  </listitem>
+	</itemizedlist>
+
+	<para>
+	  An asterisk, <quote>*</quote> appears at the beginning of the line
+	  of the container that took the longest time to start or stop.
+	  The asterisk's only purpose is to identify the container with the
+	  longest starting or stopping time.
 	</para>
       </refsect1>
 
